Added functions in kmeans

--- a/hierarchical.ipynb
+++ b/hierarchical.ipynb
@@ -126,7 +126,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_clusters(save_to_file=True):\n",
+    "def plot_clusters(k, save_to_file=True):\n",
     "    global dfs\n",
     "    global colors\n",
     "    global markers\n",
@@ -262,7 +262,7 @@
     "# 3 - do clustering for k and then plot\n",
     "for k in range(2, 8):\n",
     "    cluster_hierarchical(k)\n",
-    "    plot_clusters(k)"
+    "    plot_clusters()"
    ]
   },
   {
