--- a/clustering_kmeans_kmedoids.ipynb
+++ b/clustering_kmeans_kmedoids.ipynb
@@ -15,19 +15,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.cluster import KMeans\n",
-    "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
     "from matplotlib import pyplot as plt\n",
     "\n",
+    "# for kmeans\n",
+    "from sklearn.cluster import KMeans\n",
+    "\n",
     "# for medoids\n",
-    "# from sklearn_extra.cluster import KMedoids # no way to install\n",
+    "# from sklearn_extra.cluster import KMedoids \n",
     "from pyclustering.cluster.kmedoids import kmedoids\n",
     "from pyclustering.utils import read_sample\n",
     "from pyclustering.cluster import cluster_visualizer\n",
-    "from sklearn_extra.cluster import KMedoids\n",
+    "\n",
     "import time\n",
     "\n",
     "%matplotlib inline"
